[package]
name = "pollock"
version = "0.1.0"
authors = ["Jef <jackefransham@gmail.com>"]
license = "Unlicense"
description = "Placeholder for Rust processing-like generative art library"

[dependencies]
fnv = "1.0"
glutin = "0.18"
gfx_window_glutin = "0.26"
gfx = "0.17"
palette = { version = "0.4", features = ["serde"] }
nalgebra = { version = "0.16", features = ["serde-serialize"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rand = { version = "0.5", features = ["serde1", "i128_support"] }
