[package]
name = "pollock"
version = "0.2.2"
authors = ["Jef <jackefransham@gmail.com>"]
license = "Unlicense"
description = "An ergonomic and performant processing-like library for generative art and simple games in Rust"
readme = "README.md"

[dependencies]
arrayvec = "0.4"
fnv = "1.0"
glutin = "0.18"
gfx_window_glutin = "0.26"
gfx = "0.17"
palette = { version = "0.4", features = ["serde"] }
nalgebra = { version = "0.16", features = ["serde-serialize"] }
itertools = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rand = { version = "0.5", features = ["serde1", "i128_support"] }
image = "0.20"
tempfile = "3.0"
gifski = "0.8"
crossbeam = "0.4"
alga = "0.7"
